--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="color_turquoise">#297D89</color>
     <color name="color_gray">#626262</color>
     <color name="color_pink">#FF6060</color>
+    <color name="color_orange">#F3A313</color>
 </resources>
