fix(res): adjust layout constraints

--- a/app/src/main/res/layout/col_recycler_item.xml
+++ b/app/src/main/res/layout/col_recycler_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -13,7 +14,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
         android:orientation="vertical">
 
         <ImageView
@@ -28,13 +28,14 @@
             android:id="@+id/store_require_state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:fontFamily="@font/noto_sans_kr_medium"
             android:text="등록된 사진이 적어요"
             android:textColor="@color/color_turquoise"
             android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@id/store_image"
-            app:layout_constraintTop_toTopOf="@id/store_image" />
+            app:layout_constraintBottom_toTopOf="@id/store_name"
+            app:layout_constraintStart_toStartOf="@id/store_name"
+            app:layout_constraintTop_toTopOf="@id/store_image"
+            app:layout_constraintVertical_bias="1" />
 
         <TextView
             android:id="@+id/store_name"
@@ -45,24 +46,26 @@
             android:text="@{place.name}"
             android:textColor="@color/black"
             android:textSize="14sp"
+            app:layout_constraintTop_toTopOf="@id/store_image"
             app:layout_constraintBottom_toBottomOf="@id/store_image"
             app:layout_constraintStart_toEndOf="@id/store_image"
-            app:layout_constraintTop_toTopOf="@id/store_image" />
+            tools:text="가게 이름" />
 
 
         <TextView
             android:id="@+id/store_distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:drawablePadding="3dp"
             android:fontFamily="@font/noto_sans_kr_medium"
             android:text="270m"
             android:textColor="@color/color_turquoise"
             android:textSize="14sp"
             app:drawableStartCompat="@drawable/ic_distance"
+            app:layout_constraintTop_toBottomOf="@id/store_name"
             app:layout_constraintBottom_toBottomOf="@id/store_image"
-            app:layout_constraintStart_toEndOf="@id/store_image" />
+            app:layout_constraintVertical_bias="0"
+            app:layout_constraintStart_toStartOf="@id/store_name" />
 
 
         <TextView
@@ -77,8 +80,10 @@
             android:textColor="@color/color_pink"
             android:textSize="14sp"
             app:drawableStartCompat="@drawable/ic_heart"
-            app:layout_constraintBottom_toBottomOf="@id/store_image"
-            app:layout_constraintStart_toEndOf="@id/store_distance" />
+            app:layout_constraintTop_toTopOf="@id/store_distance"
+            app:layout_constraintBottom_toBottomOf="@id/store_distance"
+            app:layout_constraintStart_toEndOf="@id/store_distance"
+            tools:text="10" />
 
         <TextView
             android:id="@+id/store_coins"
@@ -92,7 +97,8 @@
             android:textColor="@color/color_orange"
             android:textSize="14sp"
             app:drawableStartCompat="@drawable/ic_coin"
-            app:layout_constraintBottom_toBottomOf="@id/store_image"
+            app:layout_constraintTop_toTopOf="@id/store_distance"
+            app:layout_constraintBottom_toBottomOf="@id/store_distance"
             app:layout_constraintStart_toEndOf="@id/store_hearts" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
