--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.user.UserFragment"
+        tools:context=".presentation.main.user.UserFragment"
         android:paddingStart="24dp"
         android:paddingEnd="24dp">
 
