feat: add participation fragment lack information recyclerview

--- a/app/src/main/res/layout/fragment_participation.xml
+++ b/app/src/main/res/layout/fragment_participation.xml
@@ -42,53 +42,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/participation_textview" />
 
-            <TextView
-                android:id="@+id/lack_information_more_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/noto_sans_kr_medium"
-                android:text="더보기"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="@id/lack_information_textview"
-                app:layout_constraintEnd_toEndOf="parent" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:scrollbars="none"
+                android:overScrollMode="never"
                 android:id="@+id/lack_information_recyclerview"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@id/lack_information_textview" />
-
-            <TextView
-                android:id="@+id/require_verification_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/noto_sans_kr_bold"
-                android:text="검증이 필요한 가게"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/lack_information_recyclerview" />
-
-            <TextView
-                android:id="@+id/require_verification_more_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/noto_sans_kr_medium"
-                android:text="더보기"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="@id/require_verification_textview"
-                app:layout_constraintEnd_toEndOf="parent" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/require_verification_recyclerview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/require_verification_textview" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
