--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="color_gray">#626262</color>
     <color name="color_pink">#FF6060</color>
     <color name="color_orange">#F3A313</color>
+    <color name="aqua_marin">#2CADC0</color>
 </resources>
