--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="wallet_box_gray">#F8F8F8</color>
     <color name="color_turquoise">#297D89</color>
     <color name="color_gray">#626262</color>
+    <color name="light_gray">#B3B3B3</color>
     <color name="color_pink">#FF6060</color>
     <color name="color_orange">#F3A313</color>
     <color name="aqua_marin">#2CADC0</color>
