refactor(res): change aquamarine color name

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,5 @@
     <color name="light_gray">#B3B3B3</color>
     <color name="color_pink">#FF6060</color>
     <color name="color_orange">#F3A313</color>
-    <color name="aqua_marin">#2CADC0</color>
+    <color name="aquamarine">#2CADC0</color>
 </resources>
