--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="color_turquoise">#297D89</color>
     <color name="color_gray">#626262</color>
     <color name="light_gray">#B3B3B3</color>
+    <color name="very_light_gray">#F6F6F6</color>
     <color name="color_pink">#FF6060</color>
     <color name="color_orange">#F3A313</color>
     <color name="aquamarine">#2CADC0</color>
